[package]
name = "qtum-private"
version = "0.1.0-qtum"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "The Rust Bitcoin developers", "The Qtum developers"]
license = "CC0-1.0"
repository = "https://github.com/qtumproject/rust-qtum/internals"
documentation = "https://docs.rs/bitcoin-private"
description = "Internal types and macros used by rust-bitcoin ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["internal"]
readme = "README.md"
edition = "2018"
exclude = ["tests", "contrib"]
autotests = false

[features]
default = []
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dev-dependencies]
