[package]
name = "qtum-internals"
version = "0.2.0-qtum"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "The Rust Bitcoin developers", "The Qtum developers"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/qtumproject/rust-qtum/internals"
documentation = "https://docs.rs/bitcoin-internals"
description = "Internal types and macros used by rust-bitcoin ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["internal"]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"
exclude = ["tests", "contrib"]
autotests = false

[features]
default = []
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.103", default-features = false, optional = true }

[dev-dependencies]
